[package]
name = "pinewood-derby"
version = "0.1.0"
authors = ["Kevin Song <chips@ksong.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lang-c = "0.9.0"
thiserror = "1.0.23"
lazy_static = "1.4.0"
regex = "1.4.2"
num = "0.3.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
